--- a/PengLiang_NN.ipynb
+++ b/PengLiang_NN.ipynb
@@ -456,6 +456,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from src import network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module src.network in src:\n",
+      "\n",
+      "NAME\n",
+      "    src.network\n",
+      "\n",
+      "DESCRIPTION\n",
+      "    network.py\n",
+      "    ~~~~~~~~~~\n",
+      "    \n",
+      "    A module to implement the stochastic gradient descent learning\n",
+      "    algorithm for a feedforward neural network.  Gradients are calculated\n",
+      "    using backpropagation.  Note that I have focused on making the code\n",
+      "    simple, easily readable, and easily modifiable.  It is not optimized,\n",
+      "    and omits many desirable features.\n",
+      "\n",
+      "CLASSES\n",
+      "    builtins.object\n",
+      "        Network\n",
+      "    \n",
+      "    class Network(builtins.object)\n",
+      "     |  Methods defined here:\n",
+      "     |  \n",
+      "     |  SGD(self, training_data, epochs, mini_batch_size, eta, test_data=None)\n",
+      "     |      Train the neural network using mini-batch stochastic\n",
+      "     |      gradient descent.  The ``training_data`` is a list of tuples\n",
+      "     |      ``(x, y)`` representing the training inputs and the desired\n",
+      "     |      outputs.  The other non-optional parameters are\n",
+      "     |      self-explanatory.  If ``test_data`` is provided then the\n",
+      "     |      network will be evaluated against the test data after each\n",
+      "     |      epoch, and partial progress printed out.  This is useful for\n",
+      "     |      tracking progress, but slows things down substantially.\n",
+      "     |  \n",
+      "     |  __init__(self, sizes)\n",
+      "     |      The list ``sizes`` contains the number of neurons in the\n",
+      "     |      respective layers of the network.  For example, if the list\n",
+      "     |      was [2, 3, 1] then it would be a three-layer network, with the\n",
+      "     |      first layer containing 2 neurons, the second layer 3 neurons,\n",
+      "     |      and the third layer 1 neuron.  The biases and weights for the\n",
+      "     |      network are initialized randomly, using a Gaussian\n",
+      "     |      distribution with mean 0, and variance 1.  Note that the first\n",
+      "     |      layer is assumed to be an input layer, and by convention we\n",
+      "     |      won't set any biases for those neurons, since biases are only\n",
+      "     |      ever used in computing the outputs from later layers.\n",
+      "     |  \n",
+      "     |  backprop(self, x, y)\n",
+      "     |      Return a tuple ``(nabla_b, nabla_w)`` representing the\n",
+      "     |      gradient for the cost function C_x.  ``nabla_b`` and\n",
+      "     |      ``nabla_w`` are layer-by-layer lists of numpy arrays, similar\n",
+      "     |      to ``self.biases`` and ``self.weights``.\n",
+      "     |  \n",
+      "     |  cost_derivative(self, output_activations, y)\n",
+      "     |      Return the vector of partial derivatives \\partial C_x /\n",
+      "     |      \\partial a for the output activations.\n",
+      "     |  \n",
+      "     |  evaluate(self, test_data)\n",
+      "     |      Return the number of test inputs for which the neural\n",
+      "     |      network outputs the correct result. Note that the neural\n",
+      "     |      network's output is assumed to be the index of whichever\n",
+      "     |      neuron in the final layer has the highest activation.\n",
+      "     |  \n",
+      "     |  feedforward(self, a)\n",
+      "     |      Return the output of the network if ``a`` is input.\n",
+      "     |  \n",
+      "     |  update_mini_batch(self, mini_batch, eta)\n",
+      "     |      Update the network's weights and biases by applying\n",
+      "     |      gradient descent using backpropagation to a single mini batch.\n",
+      "     |      The ``mini_batch`` is a list of tuples ``(x, y)``, and ``eta``\n",
+      "     |      is the learning rate.\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |  \n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables (if defined)\n",
+      "     |  \n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object (if defined)\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    sigmoid(z)\n",
+      "        The sigmoid function.\n",
+      "    \n",
+      "    sigmoid_prime(z)\n",
+      "        Derivative of the sigmoid function.\n",
+      "\n",
+      "FILE\n",
+      "    e:\\git-repository\\neural-networks-and-deep-learning\\src\\network.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(network)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
