--- a/PL-network1_3.ipynb
+++ b/PL-network1_3.ipynb
@@ -806,13 +806,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from src import network2"
+    "from src import network2\n",
+    "from src import mnist_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##导数数据和reshape都是一样的就不看了，首先来看看网络构造函数的不同：\n",
+    "net = network2.Network([784,30,10],cost=network2.CrossEntropyCost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2-1 解析这个构造函数：关注：除以np.sqrt(30)就能将方差缩小嘛？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4] [1.         1.41421356 1.73205081 2.        ]\n",
+      "[[1 2]\n",
+      " [1 1]\n",
+      " [2 2]]\n",
+      "[[1.         1.41421356]\n",
+      " [1.         1.        ]\n",
+      " [1.41421356 1.41421356]] 5.477225575051661\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 首先调用了default_weight_initializer初始化权重self.default_weight_initializer()\n",
+    "### np.sqrt\n",
+    "import numpy as np\n",
+    "x = [1,2,3,4]\n",
+    "x1 = np.array(x)\n",
+    "print(x1,np.sqrt(x1)) ##np.sqrt(x) ： 计算数组各元素的平方根\n",
+    "x = [[1,2],[1,1],[2,2]]\n",
+    "x1 = np.array(x)\n",
+    "print(x1)\n",
+    "print(np.sqrt(x1),np.sqrt(30))\n",
+    "#小结：生成一个标准正态分布之后再除以sqrt(30)，相当于把x轴压缩了，所以可以近似为减少方差的正态分布"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### 2-2 network2.py中有一个save和load函数，是用来保存参数的，非常有用，但是其数据结构是json，探究一下"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class '_io.TextIOWrapper'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_dict = {\"first\":[1,2,3],\"second\":(4,5,6)}\n",
+    "print(type(d_dict))\n",
+    "with open(\"test.json\",\"w\") as f1:\n",
+    "    print(type(f1))\n",
+    "    json.dump(d_dict,f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'second': [4, 5, 6], 'first': [1, 2, 3]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"test.json\",\"r\") as f1:\n",
+    "    temp = json.load(f1)\n",
+    "    print(type(temp))\n",
+    "    print(temp)\n",
+    "### 小结，就是存储数据的类型嘛，没什么好说的，到底有啥优点还木探究"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 测试下是不是和视频中所述一样，更快的收敛了，然后尝试保存数据下次继续训练"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 training complete\n",
+      "Accuracy on evaluation data: 9243 / 10000\n",
+      "Epoch 1 training complete\n",
+      "Accuracy on evaluation data: 9445 / 10000\n",
+      "Epoch 2 training complete\n",
+      "Accuracy on evaluation data: 9401 / 10000\n",
+      "Epoch 3 training complete\n",
+      "Accuracy on evaluation data: 9474 / 10000\n",
+      "Epoch 4 training complete\n",
+      "Accuracy on evaluation data: 9507 / 10000\n",
+      "Epoch 5 training complete\n",
+      "Accuracy on evaluation data: 9479 / 10000\n",
+      "Epoch 6 training complete\n",
+      "Accuracy on evaluation data: 9507 / 10000\n",
+      "Epoch 7 training complete\n",
+      "Accuracy on evaluation data: 9508 / 10000\n",
+      "Epoch 8 training complete\n",
+      "Accuracy on evaluation data: 9546 / 10000\n",
+      "Epoch 9 training complete\n",
+      "Accuracy on evaluation data: 9457 / 10000\n",
+      "Epoch 10 training complete\n",
+      "Accuracy on evaluation data: 9553 / 10000\n",
+      "Epoch 11 training complete\n",
+      "Accuracy on evaluation data: 9474 / 10000\n",
+      "Epoch 12 training complete\n",
+      "Accuracy on evaluation data: 9504 / 10000\n",
+      "Epoch 13 training complete\n",
+      "Accuracy on evaluation data: 9501 / 10000\n",
+      "Epoch 14 training complete\n",
+      "Accuracy on evaluation data: 9467 / 10000\n",
+      "Epoch 15 training complete\n",
+      "Accuracy on evaluation data: 9482 / 10000\n",
+      "Epoch 16 training complete\n",
+      "Accuracy on evaluation data: 9574 / 10000\n",
+      "Epoch 17 training complete\n",
+      "Accuracy on evaluation data: 9505 / 10000\n",
+      "Epoch 18 training complete\n",
+      "Accuracy on evaluation data: 9555 / 10000\n",
+      "Epoch 19 training complete\n",
+      "Accuracy on evaluation data: 9523 / 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src import mnist_loader\n",
+    "from src import network2\n",
+    "\n",
+    "tra_d,val_d,tst_d = mnist_loader.load_data_wrapper()\n",
+    "net1 = network2.Network([784,30,10],cost=network2.CrossEntropyCost)##这里的用法也要注意一下！\n",
+    "net1.SGD(tra_d,20,10,1.0,lmbda=5.0,evaluation_data=val_d,monitor_evaluation_accuracy = True)\n",
+    "net1.save(\"traing_reslut.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### 网络好像是比network的快一点，可以保存参数以后从参数直接创建新的好的网络"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "net2 = network2.load(\"traing_reslut.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 有空的时候可以玩一玩，用训练好从参数，直接预测，今天就不搞了"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## network3.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
+      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\theano\\configdefaults.py:560: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
+      "  warnings.warn(\"DeprecationWarning: there is no c++ compiler.\"\n",
+      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'downsample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-04b3744c60cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0msrc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnetwork3\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mE:\\Git-repository\\neural-networks-and-deep-learning\\src\\network3.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnnet\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msoftmax\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mshared_randomstreams\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msignal\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdownsample\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[1;31m# Activation functions for neurons\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'downsample'"
+     ]
+    }
+   ],
+   "source": [
+    "from src import network3"
    ]
   },
   {
