进一步了解了彭亮基于theano的CNN的算法流程

--- a/PL-network1_3.ipynb
+++ b/PL-network1_3.ipynb
@@ -1342,7 +1342,8 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1446,6 +1447,431 @@
     "temp = {\"layers\":net3.layers}\n",
     "#with open(\"convnn.json\",\"w\") as f:\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function prod in module numpy.core.fromnumeric:\n",
+      "\n",
+      "prod(a, axis=None, dtype=None, out=None, keepdims=<class 'numpy._globals._NoValue'>)\n",
+      "    Return the product of array elements over a given axis.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Input data.\n",
+      "    axis : None or int or tuple of ints, optional\n",
+      "        Axis or axes along which a product is performed.  The default,\n",
+      "        axis=None, will calculate the product of all the elements in the\n",
+      "        input array. If axis is negative it counts from the last to the\n",
+      "        first axis.\n",
+      "    \n",
+      "        .. versionadded:: 1.7.0\n",
+      "    \n",
+      "        If axis is a tuple of ints, a product is performed on all of the\n",
+      "        axes specified in the tuple instead of a single axis or all the\n",
+      "        axes as before.\n",
+      "    dtype : dtype, optional\n",
+      "        The type of the returned array, as well as of the accumulator in\n",
+      "        which the elements are multiplied.  The dtype of `a` is used by\n",
+      "        default unless `a` has an integer dtype of less precision than the\n",
+      "        default platform integer.  In that case, if `a` is signed then the\n",
+      "        platform integer is used while if `a` is unsigned then an unsigned\n",
+      "        integer of the same precision as the platform integer is used.\n",
+      "    out : ndarray, optional\n",
+      "        Alternative output array in which to place the result. It must have\n",
+      "        the same shape as the expected output, but the type of the output\n",
+      "        values will be cast if necessary.\n",
+      "    keepdims : bool, optional\n",
+      "        If this is set to True, the axes which are reduced are left in the\n",
+      "        result as dimensions with size one. With this option, the result\n",
+      "        will broadcast correctly against the input array.\n",
+      "    \n",
+      "        If the default value is passed, then `keepdims` will not be\n",
+      "        passed through to the `prod` method of sub-classes of\n",
+      "        `ndarray`, however any non-default value will be.  If the\n",
+      "        sub-classes `sum` method does not implement `keepdims` any\n",
+      "        exceptions will be raised.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    product_along_axis : ndarray, see `dtype` parameter above.\n",
+      "        An array shaped as `a` but with the specified axis removed.\n",
+      "        Returns a reference to `out` if specified.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    ndarray.prod : equivalent method\n",
+      "    numpy.doc.ufuncs : Section \"Output arguments\"\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    Arithmetic is modular when using integer types, and no error is\n",
+      "    raised on overflow.  That means that, on a 32-bit platform:\n",
+      "    \n",
+      "    >>> x = np.array([536870910, 536870910, 536870910, 536870910])\n",
+      "    >>> np.prod(x)  # random\n",
+      "    16\n",
+      "    \n",
+      "    The product of an empty array is the neutral element 1:\n",
+      "    \n",
+      "    >>> np.prod([])\n",
+      "    1.0\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    By default, calculate the product of all elements:\n",
+      "    \n",
+      "    >>> np.prod([1.,2.])\n",
+      "    2.0\n",
+      "    \n",
+      "    Even when the input array is two-dimensional:\n",
+      "    \n",
+      "    >>> np.prod([[1.,2.],[3.,4.]])\n",
+      "    24.0\n",
+      "    \n",
+      "    But we can also specify the axis over which to multiply:\n",
+      "    \n",
+      "    >>> np.prod([[1.,2.],[3.,4.]], axis=1)\n",
+      "    array([  2.,  12.])\n",
+      "    \n",
+      "    If the type of `x` is unsigned, then the output type is\n",
+      "    the unsigned platform integer:\n",
+      "    \n",
+      "    >>> x = np.array([1, 2, 3], dtype=np.uint8)\n",
+      "    >>> np.prod(x).dtype == np.uint\n",
+      "    True\n",
+      "    \n",
+      "    If `x` is of a signed integer type, then the output type\n",
+      "    is the default platform integer:\n",
+      "    \n",
+      "    >>> x = np.array([1, 2, 3], dtype=np.int8)\n",
+      "    >>> np.prod(x).dtype == int\n",
+      "    True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.prod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "180"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[2,3],[5,6]])\n",
+    "np.prod(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 18])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.prod(x,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6, 30])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.prod(x,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 小结：\n",
+    "prod函数，返回的是矩阵所有元素的乘积，当指定特定维度的时候，也可以算出特定维度的乘积，axis=0：列内相乘；axis=1：行内相乘"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31.25"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5*25/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = sum([(i**2).sum() for i in x])\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4+9+25+36"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x[0,0]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 3],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
+      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\theano\\configdefaults.py:560: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
+      "  warnings.warn(\"DeprecationWarning: there is no c++ compiler.\"\n",
+      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import theano as TH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function shared in module theano.compile.sharedvalue:\n",
+      "\n",
+      "shared(value, name=None, strict=False, allow_downcast=None, **kwargs)\n",
+      "    Return a SharedVariable Variable, initialized with a copy or\n",
+      "    reference of `value`.\n",
+      "    \n",
+      "    This function iterates over constructor functions to find a\n",
+      "    suitable SharedVariable subclass.  The suitable one is the first\n",
+      "    constructor that accept the given value.  See the documentation of\n",
+      "    :func:`shared_constructor` for the definition of a constructor\n",
+      "    function.\n",
+      "    \n",
+      "    This function is meant as a convenient default.  If you want to use a\n",
+      "    specific shared variable constructor, consider calling it directly.\n",
+      "    \n",
+      "    ``theano.shared`` is a shortcut to this function.\n",
+      "    \n",
+      "    .. attribute:: constructors\n",
+      "    \n",
+      "    A list of shared variable constructors that will be tried in reverse\n",
+      "    order.\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    By passing kwargs, you effectively limit the set of potential constructors\n",
+      "    to those that can accept those kwargs.\n",
+      "    \n",
+      "    Some shared variable have ``borrow`` as extra kwargs.\n",
+      "    `See <http://deeplearning.net/software/theano/tutorial/aliasing.    html#borrowing-when-creating-shared-variables>`_ for details.\n",
+      "    \n",
+      "    Some shared variable have ``broadcastable`` as extra kwargs. As shared\n",
+      "    variable shapes can change, all dimensions default to not being\n",
+      "    broadcastable, even if ``value`` has a shape of 1 along some dimension.\n",
+      "    This parameter allows you to create for example a `row` or `column` 2d\n",
+      "    tensor.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(TH.shared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function cast in module theano.tensor.basic:\n",
+      "\n",
+      "cast(x, dtype)\n",
+      "    Symbolically cast `x` to a Tensor of type `dtype`.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(TH.tensor.cast)"
    ]
   },
   {
